# fna-be

./: .dockerignore  .env.example  .gitignore  CHANGELOG_v3.md  Dockerfile  README.md  pyproject.toml  requirements.txt
data/inputs/pecd/: README.md
data/inputs/sample/: cross_border_flows.csv  day_ahead_prices.csv  neighbour_day_ahead_prices.csv  res_generation_actual.csv  res_generation_forecast.csv
data/pecd/: README.md
data/sample/: generation_unavailability.csv  installed_capacity.csv  load.csv
docs/: ACER_FNA_COMPLIANCE_GAP_MATRIX.md  ANNEX1_MAPPING.md  BELGIUM_FNA_DATA_SOURCE_MAP.md  GUIDING_CRITERIA_TRACEABILITY.md  METHODOLOGY.md  OUTPUT_GUIDE.docx  USER_GUIDE.md
excel/: demo_input.xlsx
gams/: uc_ed_model_v3.gms
python/: barriers.py  build_full_year.py  build_full_year_workbook.py  config.py  data_quality_report.py  fetch_be_2023_data.py  fna_charts.py  fna_cross_year.py  fna_indicators.py  fna_ramping.py  fna_res_integration.py  fna_shortterm.py  io_excel.py  main.py  mc_charts.py  migrate_v3_1_workbook.py  multi_year.py  network_needs.py  plot_results.py  rep_days.py  run_gams.py
python/fna/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  run_metadata.py
python/fna/inputs/: fetch.py  full_year.py  rep_days.py  styling.py
python/fna/io/: excel.py  migrate.py
python/fna/model/: gams.py  multi_year.py  run.py
python/fna/plots/: base.py  cross_year.py  fna_charts.py  mc_charts.py  report.py
python/fna_be/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  run_metadata.py
scripts/: pull_vm_results.sh
(+22 files in other folders)
