[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fna-be"
version = "3.1.0"
description = "Belgium Flexibility Needs Assessment prototype (ACER FNA, Art. 8-14)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy>=2.0",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "typer>=0.9",
    "click>=8.0,<8.2",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "entsoe-py>=0.5",
    "pyarrow>=14",
    "python-dotenv",
    "psutil",
]

[project.scripts]
fna-be = "fna_be.cli:app"

[tool.setuptools.packages.find]
where = ["python"]
include = ["fna_be*"]

[tool.setuptools.package-dir]
"" = "python"
